--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,17 +1,20 @@
 $bgColor: #24292e;
 $text: #fff;
 
-@font-face {
-  font-family: 'Comic';
-  src: url('../fonts/comic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
+@import 'normalize.scss';
+@import 'fonts.scss';
+@import 'styles-1-3.scss';
+@import 'styles-1-4.scss';
+@import 'style-1-5.scss';
+
+.page {
+  display: flex;
+    width: 100%;
+    min-width: 320px;
+    max-width: 1440px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    font-family: 'TT Lakes';
 }
 
-body {
-  padding: 1rem;
-  margin: 0;
-  font-family: Comic, sans-serif;
-  background-color: $bgColor;
-  color: $text;
-}
+
