--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,4 @@
 @import '../blocks/swiper.scss';
 @import '../blocks/repair-brands.scss';
 @import '../blocks/repair-type.scss';
-
-
-
+@import '../blocks/service-prices.scss';
