--- a/src/blocks/nav-burger.scss
+++ b/src/blocks/nav-burger.scss
@@ -20,7 +20,7 @@
 	list-style: none;
 	margin-bottom: 32px;
 	transition: all 0.5s;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .link--item {
@@ -36,10 +36,10 @@ transition: all 0.5s;
 .nav-list__item:hover::before {
 	content: "";
 	position: absolute;
-	left: -4px;
-	border-left: 8px solid $stripColor;
+	left: 0px;
+	border-left: 4px solid $stripColor;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 	height: 32px;
-	transition: all 0.5s;
+	transition: 0.5s;
 }
