--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,5 @@
 @import '../blocks/repair-brands.scss';
 @import '../blocks/repair-type.scss';
 @import '../blocks/service-prices.scss';
+@import '../blocks/footer.scss';
+
