--- a/src/blocks/container-burger.scss
+++ b/src/blocks/container-burger.scss
@@ -1,19 +1,27 @@
-.container-burger {
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
+.container-burger {  
   min-height: 100vh;
   max-height: 1024px;
   max-width: 360px;
-  box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 
-  16px 0px 52px rgba(14, 24, 80, 0.2);
-  @media (max-width: 1335) {
-    position: absolute;
-    top: 0;
-    left: -400px;
-  }  
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  @media (min-width: 1335) {
+
+}
+}
+  
+.container-burger--hidden {
+    display: none;
+}  
+
+.container-burger--absolute {
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  max-width: 360px;
 }
 
 .container-header-nav {
   flex: 1 0 auto;
 }
+
