--- a/src/blocks/footer.scss
+++ b/src/blocks/footer.scss
@@ -8,11 +8,22 @@
   color: $textGray;
   align-content: center;
   font-weight: 500;
-  padding: 0 32px;
+  padding: 0 32px; 
+  @media (max-width: 767px) {
+    grid-template-columns: 1fr;
+    gap: 16px;
+    height: 147px;
+    padding-left: 16px;
+    padding-right: 16px;
+    text-align: center;
+  }
   @media (min-width: 768px) and (max-width: 1199px){
     padding: 0 24px;
   }
 }
 .footer-info:last-of-type {
   text-align: right;
+  @media (max-width: 767px) {
+    text-align: center;
+  }
 }
