--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,4 +15,6 @@
 @import '../blocks/repair-type.scss';
 @import '../blocks/service-prices.scss';
 @import '../blocks/footer.scss';
+@import '../blocks/modal.scss';
+
 
