--- a/src/blocks/service-prices.scss
+++ b/src/blocks/service-prices.scss
@@ -17,6 +17,7 @@
 .prices-mobile {
   padding: 16px;
   padding-left: 0;
+  padding-bottom: 32px;
   @media (min-width: 767px) {
     display: none;
   }
@@ -108,6 +109,11 @@ font-weight: 500;
   }
 }
 
+.prices-info{
+  @media (max-width: 767px) {
+    padding-top: 16px;
+  }
+}
 
 .prices-info__text {
   max-width: 425px;
